--- a/app/src/main/res/layout/activity_fill_project.xml
+++ b/app/src/main/res/layout/activity_fill_project.xml
@@ -44,46 +44,7 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 >
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_gravity="center_horizontal"
-                    >
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="人像"
-                        android:layout_marginTop="30dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_gravity="center"/>
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="風景"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_gravity="center" />
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="婚紗"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_gravity="center" />
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="寵物"
-                        android:layout_marginTop="10dp"
-                        android:layout_gravity="center" />
-                    <Button
-                        android:id="@id/button2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="上傳作品集"
-                        android:layout_gravity="center" />
-                </LinearLayout>
+
 
                 <ImageView
                     android:id="@+id/imageView"
@@ -93,33 +54,95 @@
                     android:layout_margin="30dp"
                     android:layout_weight="1"
                     android:scaleType="fitXY" />
-
+                <Button
+                    android:id="@id/button2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="上傳作品"
+                    android:layout_marginRight="30dp"
+                    android:layout_gravity="center" />
 
 
             </LinearLayout>
 
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+
+            >
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="人像"
+                android:layout_gravity="center"
+                android:layout_weight="1"/>
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="風景"
+                android:layout_gravity="center"
+                android:layout_weight="1"/>
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="婚紗"
+                android:layout_gravity="center"
+                android:layout_weight="1"/>
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="寵物"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                />
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
+            android:layout_height="70dp"
+            android:orientation="horizontal"
             android:layout_gravity="center">
 
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="價格："
+                android:textSize="20dp"
+                />
             <EditText
-                android:layout_width="350dp"
-                android:layout_height="300dp"
-                android:layout_margin="20dp"
+                android:id="@+id/priceText52"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:singleLine="false"
-                android:hint="      輸入說明文字"
-                android:background="@drawable/img_1234"
+                android:hint="請輸入價格"
+                android:inputType="number"
                 />
 
-
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:entries="@array/unit" />
 
 
         </LinearLayout>
+
+        <EditText
+            android:layout_width="350dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+            android:background="@drawable/img_1234"
+            android:hint="      輸入說明文字"
+            android:singleLine="false" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -147,8 +170,6 @@
                 android:text="上傳" />
 
         </LinearLayout>
-
-
 
 
     </LinearLayout>
