--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -2,31 +2,31 @@
 
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/img_background">
 
-<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+
+
+        >
 
 
 
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="會員註冊"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="30dp"
-        android:layout_marginTop="5dp"/>
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="會員註冊"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="30dp"
+            android:layout_marginTop="5dp"/>
 
 
         <ImageView
@@ -34,246 +34,254 @@
             android:layout_marginTop="5dp"
             android:layout_width="278dp"
             android:layout_height="269dp"/>
-    
 
 
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="5dp"
-        android:text="上傳照片"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="47dp"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:orientation="horizontal">
+        <Button
+            android:id="@+id/button"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="5dp"
+            android:text="上傳照片"/>
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="姓名:  "
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="20dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/Text_account1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="　帳號："
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="20dp" />
+
+            <EditText
+                android:id="@+id/Text_account"
+                android:layout_width="250dp"
+                android:layout_height="45dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/edittext"
+                android:hint="請輸入帳號"
+                android:paddingLeft="10dp"
+                android:textSize="20sp" />
 
 
-        <EditText
-            android:id="@+id/priceText"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:gravity="left|top"
-            android:hint="請輸入姓名..."
-            android:inputType="text"
-            android:maxLength="6" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/Text_password1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="　密碼："
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="20dp" />
+
+            <EditText
+                android:id="@+id/Text_password"
+                android:layout_width="250dp"
+                android:layout_height="45dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/edittext"
+                android:hint="請輸入密碼"
+                android:paddingLeft="10dp"
+                android:inputType="textPassword"
+                android:textSize="20sp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="　姓名："
+                android:layout_marginLeft="10dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="20dp" />
+
+
+            <EditText
+                android:id="@+id/Text_name"
+                android:layout_width="250dp"
+                android:layout_height="45dp"
+                android:textSize="20sp"
+                android:layout_marginLeft="10dp"
+                android:paddingLeft="10dp"
+                android:background="@drawable/edittext"
+                android:hint="請輸入姓名"/>
+
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="　手機："
+                android:layout_marginLeft="10dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="20dp" />
+
+            <EditText
+                android:id="@+id/Text_phone"
+                android:layout_width="250dp"
+                android:layout_height="45dp"
+                android:textSize="20sp"
+                android:paddingLeft="10dp"
+                android:layout_marginLeft="10dp"
+                android:maxLength="10"
+                android:inputType="number"
+                android:background="@drawable/edittext"
+                android:hint="請輸入手機"/>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView557"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="身份證："
+                android:layout_marginLeft="10dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="20dp" />
+
+            <EditText
+                android:id="@+id/Text_identity"
+                android:layout_width="250dp"
+                android:layout_height="45dp"
+                android:textSize="20sp"
+                android:paddingLeft="10dp"
+                android:layout_marginLeft="10dp"
+                android:maxLength="10"
+                android:background="@drawable/edittext"
+                android:hint="請輸入身分證"/>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" Email："
+                android:layout_marginLeft="10dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="20dp" />
+
+            <EditText
+                android:id="@+id/Text_mail"
+                android:layout_width="250dp"
+                android:layout_height="45dp"
+                android:textSize="20sp"
+                android:paddingLeft="10dp"
+                android:layout_marginLeft="10dp"
+                android:maxLength="30"
+                android:background="@drawable/edittext"
+                android:hint="請輸入E-mail"/>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="　地址："
+                android:layout_marginLeft="10dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="20dp" />
+
+
+
+            <EditText
+                android:id="@+id/Text_address"
+                android:layout_width="250dp"
+                android:layout_height="45dp"
+                android:textSize="20sp"
+                android:layout_marginLeft="10dp"
+                android:paddingLeft="10dp"
+                android:background="@drawable/edittext"
+                android:hint="請輸入地址"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="5dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button_yes"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="清除"
+                />
+
+
+            <Button
+                android:id="@+id/submit"
+                android:layout_below="@+id/helloWorld"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:text="確認" />
+
+        </LinearLayout>
 
 
     </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="47dp"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="手機:  "
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="20dp" />
-
-        <EditText
-            android:id="@+id/priceText123"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:gravity="left|top"
-            android:hint="請輸入電話..."
-            android:inputType="number"
-            android:maxLength="10" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="47dp"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView557"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="身份證:"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="20dp" />
-
-        <EditText
-            android:id="@+id/priceText49"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:gravity="left|top"
-            android:hint="請輸入身份證字號..."
-            android:inputType="text"
-            android:maxLength="10" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="47dp"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Email:  "
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="20dp" />
-
-        <EditText
-            android:id="@+id/priceText44"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:gravity="left|top"
-            android:hint="請輸入信箱..."
-            android:inputType="textEmailSubject"
-            android:maxLength="6" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="47dp"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="地址:  "
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="20dp" />
-
-
-
-        <EditText
-            android:id="@+id/priceText52"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:gravity="left|top"
-            android:hint="請輸入地址..."
-            android:inputType="text"
-            android:maxLength="6" />
-
-
-
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="47dp"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView55"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="帳號:  "
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="20dp" />
-
-        <EditText
-            android:id="@+id/priceText446"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:gravity="left|top"
-            android:hint="請輸入帳號..."
-            android:inputType="text"
-            android:maxLength="10" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="47dp"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView54"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="密碼:  "
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="20dp" />
-
-        <EditText
-            android:id="@+id/priceText47"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:gravity="left|top"
-            android:hint="請輸入密碼..."
-            android:inputType="textPassword"
-            android:maxLength="10" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingTop="5dp"
-    android:orientation="horizontal">
-
-    <Button
-        android:id="@+id/button_yes"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:text="清除"
-        />
-
-
-    <Button
-        android:id="@+id/btn"
-        android:layout_below="@+id/helloWorld"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:text="確認" />
-
-</LinearLayout>
-
-
-</LinearLayout>
 
 </ScrollView>
